# pyddb

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
.devcontainer/: devcontainer.json
app/adapter/inbound/cli/: main.py
app/adapter/outbound/: aws_unit_of_work.py
app/adapter/outbound/dynamodb/: dynamodb_context.py  index.py  operations.py  repositories.py  serialize.py  transaction.py
app/domain/user/: commands.py  handlers.py  repository.py
app/test/unit/: test_external.py
infra/: main.tf
