[project]
name = "pyddb"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
root = "app"
dependencies = [
    "arguably>=1.3.0",
    "boto3-stubs[dynamodb]>=1.36.21",
    "boto3[dynamodb]>=1.36.21",
    "pydantic>=2.10.6",
    "ulid>=1.1",
]

[dependency-groups]
dev = [
    "assertpy>=1.1",
    "pyright>=1.1.394",
    "pytest>=8.3.4",
    "pytest-watch>=4.2.0",
]

[tool.ruff]
lint.extend-select=["I"]

[tool.ruff.lint.isort]
section-order = ["future", "standard-library", "first-party", "local-folder", "third-party"]
